--- a/app/web/index.html
+++ b/app/web/index.html
@@ -46,7 +46,7 @@
     body {
       margin: 0;
       min-height: 100%;
-      background-color: #000000;
+      background-color: #ffffff;
           background-size: 100% 100%;
     }
 
@@ -74,6 +74,25 @@
       display:block;
       width:100%; height:100%;
       object-fit: cover;
+    }
+
+    /* Loading spinner animation */
+    .loader {
+      position: absolute;
+      bottom: 80px;
+      left: 50%;
+      transform: translateX(-50%);
+      width: 48px;
+      height: 48px;
+      border: 4px solid #f3f3f3;
+      border-top: 4px solid #FF6FB1;
+      border-radius: 50%;
+      animation: spin 1s linear infinite;
+    }
+
+    @keyframes spin {
+      0% { transform: translateX(-50%) rotate(0deg); }
+      100% { transform: translateX(-50%) rotate(360deg); }
     }
 
     .bottom {
@@ -105,11 +124,8 @@
   </script>
 </head>
 <body>
-  <picture id="splash">
-      <source srcset="splash/img/light-1x.png 1x, splash/img/light-2x.png 2x, splash/img/light-3x.png 3x, splash/img/light-4x.png 4x" media="(prefers-color-scheme: light)">
-      <source srcset="splash/img/dark-1x.png 1x, splash/img/dark-2x.png 2x, splash/img/dark-3x.png 3x, splash/img/dark-4x.png 4x" media="(prefers-color-scheme: dark)">
-      <img class="cover" aria-hidden="true" src="splash/img/light-1x.png" alt="">
-  </picture>
+  <!-- Splash natif blanc avec loader uniquement -->
+  <div class="loader"></div>
   
   
   
