--- a/app/web/index.html
+++ b/app/web/index.html
@@ -30,6 +30,10 @@
   <title>masslive</title>
   <link rel="manifest" href="manifest.json">
   
+  <!-- Mapbox GL JS v2.15.0 -->
+  <link href="https://api.mapbox.com/mapbox-gl-js/v2.15.0/mapbox-gl.css" rel="stylesheet" />
+  <script src="https://api.mapbox.com/mapbox-gl-js/v2.15.0/mapbox-gl.js"></script>
+  <script src="mapbox_circuit.js"></script>
   
   <meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" name="viewport">
   
