--- a/app/web/index.html
+++ b/app/web/index.html
@@ -55,15 +55,27 @@
   
   
   <style id="splash-screen-style">
-    html {
-      height: 100%
+    html,
+    body {
+      width: 100%;
+      height: 100%;
+      margin: 0;
+      padding: 0;
+      overflow: hidden;
     }
 
     body {
-      margin: 0;
       min-height: 100%;
       background-color: #ffffff;
-          background-size: 100% 100%;
+      background-size: 100% 100%;
+    }
+
+    /* Assure que le conteneur Flutter occupe toujours toute la fenêtre */
+    #flutter_view,
+    flutter-view,
+    flt-glass-pane {
+      width: 100% !important;
+      height: 100% !important;
     }
 
     .center {
