feat: amélioration shop (stock, assets, admin commerce)

--- a/app/web/index.html
+++ b/app/web/index.html
@@ -37,7 +37,7 @@
   <script>
     // Token Mapbox - OPTIONNEL : passe le via --dart-define=MAPBOX_ACCESS_TOKEN=ton_token
     // Laisse vide ou "" pour forcer l'utilisation de --dart-define uniquement
-    window.__MAPBOX_TOKEN__ = "";
+    window.__MAPBOX_TOKEN__ = "pk.eyJ1Ijoic3RlZjk3MWZ3aSIsImEiOiJjbWt1aDBqNW8yMmdmM2RvcXg4aThrcGRzIn0.7vrVoNjhUFHW1c8f-Dbczg";
 
     // Style par défaut (ton style "box")
     window.__MAPBOX_STYLE__ = "mapbox://styles/mapbox/streets-v12";
