--- a/app/web/index.html
+++ b/app/web/index.html
@@ -30,9 +30,72 @@
   <title>masslive</title>
   <link rel="manifest" href="manifest.json">
   
-  <!-- Mapbox GL JS v2.15.0 -->
-  <link href="https://api.mapbox.com/mapbox-gl-js/v2.15.0/mapbox-gl.css" rel="stylesheet" />
-  <script src="https://api.mapbox.com/mapbox-gl-js/v2.15.0/mapbox-gl.js"></script>
+  <!-- Mapbox GL JS v2.15.0 (avec fallback CDN si api.mapbox.com est bloqué) -->
+  <script>
+    // Statut de chargement Mapbox GL JS (utile pour diagnostiquer MAPBOXGL_MISSING).
+    window.__MAPBOXGL_LOAD_STATUS__ = 'loading';
+
+    (function() {
+      const primary = {
+        css: 'https://api.mapbox.com/mapbox-gl-js/v2.15.0/mapbox-gl.css',
+        js: 'https://api.mapbox.com/mapbox-gl-js/v2.15.0/mapbox-gl.js',
+        label: 'primary',
+      };
+      const fallback = {
+        css: 'https://unpkg.com/mapbox-gl@2.15.0/dist/mapbox-gl.css',
+        js: 'https://unpkg.com/mapbox-gl@2.15.0/dist/mapbox-gl.js',
+        label: 'fallback',
+      };
+
+      function loadCss(href) {
+        try {
+          const link = document.createElement('link');
+          link.rel = 'stylesheet';
+          link.href = href;
+          document.head.appendChild(link);
+        } catch (_) {
+          // ignore
+        }
+      }
+
+      function loadJs(src, onload, onerror) {
+        try {
+          const s = document.createElement('script');
+          s.src = src;
+          s.async = false;
+          s.onload = onload;
+          s.onerror = onerror;
+          document.head.appendChild(s);
+        } catch (_) {
+          if (onerror) onerror();
+        }
+      }
+
+      function markLoaded(label) {
+        window.__MAPBOXGL_LOAD_STATUS__ = 'loaded(' + label + ')';
+      }
+
+      function markError(label) {
+        window.__MAPBOXGL_LOAD_STATUS__ = 'error(' + label + ')';
+      }
+
+      loadCss(primary.css);
+      loadJs(
+        primary.js,
+        function() { markLoaded(primary.label); },
+        function() {
+          markError(primary.label);
+          // Tentative fallback: utile si un bloqueur cible api.mapbox.com.
+          loadCss(fallback.css);
+          loadJs(
+            fallback.js,
+            function() { markLoaded(fallback.label); },
+            function() { markError(fallback.label); }
+          );
+        }
+      );
+    })();
+  </script>
   
   <script>
     // Token Mapbox injecté via --dart-define=MAPBOX_ACCESS_TOKEN=<ton_token> au moment du build
@@ -46,7 +109,7 @@
 
   <!-- Bridge JS pour Flutter -->
   <script src="mapbox_bridge.js"></script>
-  <script src="mapbox_circuit.js"></script>
+
   
   <meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" name="viewport">
   
